<resources>
    <string name="app_name">Scenario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_automate">Automate</string>
    <string name="api_key">563492ad6f917000010000018bc38c66a1bc4522bbe044d69a19e744</string>
    <string name="menu_search">Search</string>
    <string name="search_here">Search By Category</string>
    <string name="no_results">No results 😓</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_for_this_query">No Results found for this query</string>
    <string name="uploads">Uploads</string>


    //login fragment
    <string name="appname">SCENARIO</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="no_account">No Account?</string>
    <string name="register_with_us">Register With Us!</string>
    <string name="get_onboard">Get Onboard</string>
    <string name="register">Sign Up</string>
    <string name="enterName">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="background_image_of_the_fragment">Background image of the fragment</string>
    <string name="text">Let\'s travel through pictures, BUCKLE UP!</string>
    <string name="login_to_n_your_account">Login to\nYour account</string>
    <string name="forget_password">Forget Password?</string>


    //Register Fragment
    <string name="create_n_your_account">Create\nYour account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">SignUP</string>
    <string name="login_btn">LOGIN</string>
    <string name="edit_profile">Edit Profile</string>

    //profile Fragment
    <string name="log_out">Log out</string>
    <string name="downloads">Downloads</string>
    <string name="_453k">453K</string>
    <string name="scenario_user">Scenario User</string>
    <string name="collection">Collection</string>
    <string name="favourites">Favourites</string>
    <string name="upload">Upload</string>
    <string name="new_york_usa">new york, usa</string>
    <string name="unknown_scenario_com">userscenario@scenario.com</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_16_04_1996">16-04-1996</string>
    <string name="likes">likes</string>
    <string name="_873">873</string>
    <string name="inflates_the_menu_item">Inflates the menu item</string>
    <string name="displays_user_image">Displays user image</string>
    <string name="email_profile">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="login_get_started">LOGIN</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="place">Place</string>
    <string name="update">Update</string>
    <string name="number">89********</string>
    <string name="set_wallpaper_button">Set Wallpaper button</string>
    <string name="close_image">Close Image</string>
    <string name="download_image_button">Download Image Button</string>
    <string name="automate_wallpaper">Automate Wallpaper</string>

</resources>