<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editProfile.EditProfileFragment">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_of_the_fragment"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/circleImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="9dp"
        android:adjustViewBounds="true"
        android:background="@drawable/circle"
        android:contentDescription="@string/displays_user_image"
        android:padding="3dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toTopOf="@+id/etNameRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline8"/>

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle"
        android:src="@drawable/ic_camera_pencil"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNameRegister"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_curve"
        android:drawableStart="@drawable/ic_person_pencil"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/full_name"
        android:inputType="textCapWords"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintLeft_toRightOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmailRegister"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_curve"
        android:drawableStart="@drawable/ic_place_pencil"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/place"
        android:inputType="textCapWords"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_curve"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPasswordRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etConfirmPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/edit_text_curve"
        android:drawableStart="@drawable/ic_phone"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signupBtnRegister"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <Button
        android:id="@+id/signupBtnRegister"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/button_login_shape"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline14" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83994526" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1504788" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>
