<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_of_the_fragment"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loginToYourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/login_to_n_your_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="298dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_curve"
        android:fontFamily="@font/open_sans_regular"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="298dp"
        android:layout_height="54dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_curve"
        android:fontFamily="@font/open_sans_regular"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/imageBackground"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="234dp"
        android:layout_height="64dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_login_shape"
        android:fontFamily="@font/open_sans_regular"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearlayoutNoaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearlayoutNoaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/register_with_us"
            android:textColor="@color/pencil" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>